# slash-bot

./: .ghci  .gitignore  .hlint.yaml  CHANGELOG.md  Procfile  README.md  fourmolu.yaml  slash-bot.cabal  stack.yaml
.github/workflows/: ci.yml
src/: Blacklist.hs  Bot.hs  Config.hs  Db.hs  Interface.hs  Main.hs  Parser.hs  Util.hs
src-db/postgresql/: Db.hs
src-db/sqlite/: Db.hs
src/Db/: Blacklist.hs
src/Interface/: Blacklist.hs  Bot.hs
