cabal-version:      2.4
name:               slash-bot
version:            0.1.0.0
synopsis:           yet another slashbot

-- A longer description of the package.
-- description:
homepage:           https://github.com/FroskyArr/slash-bot

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Patrick 'FroskyArr' Chen
maintainer:         me@frost.moe

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable slash-bot
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:    Bot
                  , Config
                  , Db
                  , Db.Blacklist
                  , Interface
                  , Interface.Blacklist
                  , Interface.Bot
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   src
  build-depends:
      aeson
    , base ^>=4.15.0.0
    , bytestring
    , containers
    , data-has
    , deepseq
    , fast-logger
    , http-types
    , megaparsec
    , mtl
    , wai
    , warp
    , servant-client
    , strict
    , string-interpolate
    , sqlite-simple
    , telegram-bot-simple
    , text
    , transformers
    , vector
  default-language: Haskell2010
