cabal-version:      2.4
name:               slash-bot
version:            0.2.0.0
synopsis:           yet another slashbot

-- A longer description of the package.
-- description:
homepage:           https://github.com/FroskyArr/slash-bot

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             Patrick 'FroskyArr' Chen
maintainer:         me@frost.moe

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md
                  , src-db/postgresql/Db.hs
                  , src-db/sqlite/Db.hs

flag postgresql
  description: Use PostgreSQL as DB backend instead of sqlite
  manual: False
  default: False

executable slash-bot
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:    Bot
                  , Blacklist
                  , Db
                  , Config
                  , Interface
                  , Interface.Blacklist
                  , Interface.Bot
                  , Parser
                  , Util
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  hs-source-dirs:   src
  build-depends:
      aeson
    , base
    , bytestring
    , containers
    , data-has
    , deepseq
    , fast-logger
    , http-conduit
    , http-types
    , megaparsec
    , mtl
    , wai
    , warp
    , servant-client
    , strict
    , string-interpolate
    , telegram-bot-api ^>= 7.0
    , text
    , transformers
    , vector
    , monad-control
    , html-conduit
    , xml-lens
    , lens
    , persistent
    , monad-logger
    , warp-tls
    , unliftio
    , regex-tdfa ^>= 1.3.2

  if flag(postgresql)
    build-depends: persistent-postgresql
    hs-source-dirs: src-db/postgresql
  else
    build-depends: persistent-sqlite
    hs-source-dirs: src-db/sqlite

  default-language: Haskell2010
